--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "next": "^14.1.4",
     "nvm": "^0.0.4",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "^14.1.4",
+    "prisma": "^5.14.0",
     "typescript": "^5"
   }
 }
