--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.3",
     "@prisma/client": "^5.14.0",
     "next": "^14.1.4",
     "nvm": "^0.0.4",
