--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
+    "@neondatabase/serverless": "^0.9.3",
     "@prisma/client": "^5.14.0",
     "next": "^14.1.4",
     "nvm": "^0.0.4",
